# blpapi-rs

./: .gitattributes  Cargo.toml  LICENSE-MIT.md  README.md  aliases.js  search-index.js  settings.html  source-files.js
blpapi/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Error.html
blpapi-derive/: Cargo.toml
blpapi-derive/src/: lib.rs
blpapi-sys/: Cargo.toml  build.rs  wrapper.h
blpapi-sys/src/: bindings.rs  lib.rs
blpapi/correlation_id/: index.html  sidebar-items.js  struct.CorrelationId.html
blpapi/datetime/: enum.DatetimeParts.html  fn.is_leap_year.html  index.html  sidebar-items.js  struct.Datetime.html
blpapi/element/: index.html  sidebar-items.js  struct.Element.html  struct.Elements.html  struct.Values.html  trait.GetValue.html  trait.SetValue.html
blpapi/errors/: enum.Error.html  index.html  sidebar-items.js
blpapi/event/: enum.EventType.html  index.html  sidebar-items.js  struct.Event.html
blpapi/examples/: reference_data.rs
blpapi/examples/historical_data/: Cargo.toml
blpapi/examples/historical_data/src/: main.rs
blpapi/examples/reference_data/: Cargo.toml
blpapi/examples/reference_data/src/: main.rs
blpapi/message/: index.html  sidebar-items.js  struct.Message.html
blpapi/message_iterator/: index.html  sidebar-items.js  struct.MessageIterator.html
blpapi/name/: index.html  sidebar-items.js  struct.Name.html
blpapi/ref_data/: index.html  sidebar-items.js  trait.RefData.html
blpapi/request/: index.html  sidebar-items.js  struct.Request.html
blpapi/service/: index.html  sidebar-items.js  struct.Service.html
blpapi/session/: index.html  sidebar-items.js  struct.Events.html  struct.HistOptions.html  struct.Session.html  struct.SessionSync.html  struct.TimeSerie.html
blpapi/session_options/: enum.ClientMode.html  index.html  sidebar-items.js  struct.SessionOptions.html
blpapi/src/: correlation_id.rs  datetime.rs  element.rs  errors.rs  event.rs  lib.rs  message.rs  message_iterator.rs  name.rs  ref_data.rs  request.rs  service.rs  session.rs  session_options.rs
blpapi/tests/: derive.rs
blpapi_derive/: all.html  derive.RefData.html  index.html  sidebar-items.js
blpapi_sys/: all.html  constant.BLPAPI_BOUNDSERROR_CLASS.html  constant.BLPAPI_CLIENTMODE_AUTO.html  constant.BLPAPI_CLIENTMODE_COMPAT_33X.html  constant.BLPAPI_CLIENTMODE_DAPI.html  constant.BLPAPI_CLIENTMODE_SAPI.html  constant.BLPAPI_CNVERROR_CLASS.html  constant.BLPAPI_CORRELATION_MAX_CLASS_ID.html  constant.BLPAPI_CORRELATION_TYPE_AUTOGEN.html  constant.BLPAPI_CORRELATION_TYPE_INT.html  constant.BLPAPI_CORRELATION_TYPE_POINTER.html  constant.BLPAPI_CORRELATION_TYPE_UNSET.html  constant.BLPAPI_DATETIME_DATE_PART.html  constant.BLPAPI_DATETIME_DAY_PART.html  constant.BLPAPI_DATETIME_FRACSECONDS_PART.html  constant.BLPAPI_DATETIME_HOURS_PART.html  constant.BLPAPI_DATETIME_MILLISECONDS_PART.html  constant.BLPAPI_DATETIME_MINUTES_PART.html  constant.BLPAPI_DATETIME_MONTH_PART.html  constant.BLPAPI_DATETIME_OFFSET_PART.html  constant.BLPAPI_DATETIME_SECONDS_PART.html  constant.BLPAPI_DATETIME_TIMEFRACSECONDS_PART.html  constant.BLPAPI_DATETIME_TIMEMILLI_PART.html  constant.BLPAPI_DATETIME_TIME_PART.html  constant.BLPAPI_DATETIME_YEAR_PART.html  constant.BLPAPI_ELEMENTDEFINITION_UNBOUNDED.html  constant.BLPAPI_ELEMENT_INDEX_END.html  constant.BLPAPI_ERROR_CODEC_FAILURE.html  constant.BLPAPI_ERROR_CONNECT_FAILED.html  constant.BLPAPI_ERROR_CORRELATION_NOT_FOUND.html  constant.BLPAPI_ERROR_DS_LOOKUP_FAILED.html  constant.BLPAPI_ERROR_DS_PROPERTY_NOT_FOUND.html  constant.BLPAPI_ERROR_DUPLICATE_CORRELATIONID.html  constant.BLPAPI_ERROR_ILLEGAL_ACCESS.html  constant.BLPAPI_ERROR_ILLEGAL_ARG.html  constant.BLPAPI_ERROR_ILLEGAL_STATE.html  constant.BLPAPI_ERROR_INDEX_OUT_OF_RANGE.html  constant.BLPAPI_ERROR_INTERNAL_ERROR.html  constant.BLPAPI_ERROR_INVALID_CONVERSION.html  constant.BLPAPI_ERROR_INVALID_SESSION.html  (+626 more)
chrono/: enum.Weekday.html  struct.DateTime.html
env_logger/: struct.Builder.html  struct.Env.html  struct.Logger.html
historical_data/: all.html  fn.main.html  index.html
libc/: enum.DIR.html  enum.FILE.html  enum.fpos64_t.html  enum.fpos_t.html  enum.timezone.html  struct.max_align_t.html
proc_macro2/: struct.Span.html
reference_data/: all.html  fn.main.html  index.html
(+1033 files in other folders)
