[package]
name = "blpapi-derive"
version = "0.0.1"
authors = ["Johann Tuffe <johann.tuffe@three-stones.com>"]
edition = "2018"
description = "Proc-macro derive for bloomberg's blpapi library"

documentation = "https://docs.rs/blpapi"
repository = "https://github.com/tafia/blpapi-rs"

readme = "../README.md"
keywords = ["bloomberg", "blpapi", "trading", "derive"]
categories = ["api-bindings"]
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
