[package]
name = "blpapi-sys"
version = "0.0.1"
authors = ["Johann Tuffe <johann.tuffe@three-stones.com>"]
edition = "2018"
description = "FFI bindings to bloomberg's blpapi library"

documentation = "https://docs.rs/blpapi-sys"
repository = "https://github.com/tafia/blpapi-rs"

readme = "../README.md"
keywords = ["bloomberg", "bbg", "blpapi", "trading", "quant"]
categories = ["external-ffi-bindings"]
license = "MIT"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [build-dependencies]
# pkg-config = "0.3.17"
[features]
bundled = []
