[package]
name = "blpapi"
version = "0.1.0"
authors = ["Johann Tuffe <johann.tuffe@three-stones.com>"]
edition = "2018"

documentation = "https://docs.rs/blpapi"
repository = "https://github.com/tafia/blpapi-rs"

readme = "../README.md"
keywords = ["bloomberg", "bbg", "blpapi", "trading", "quant"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
blpapi-sys = { path = "../blpapi-sys" }
