[package]
name = "blpapi"
version = "0.0.1"
authors = ["Johann Tuffe <johann.tuffe@three-stones.com>"]
edition = "2018"

documentation = "https://docs.rs/blpapi"
repository = "https://github.com/tafia/blpapi-rs"

readme = "../README.md"
keywords = ["bloomberg", "bbg", "blpapi", "trading", "quant"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
blpapi-sys = { path = "../blpapi-sys", version = "0.0.1" }
blpapi-derive = { path = "../blpapi-derive", version = "0.0.1", optional = true }
log = "0.4.8"

[features]
default = []
derive = [ "blpapi-derive" ]
